<?xml version="1.0"?>
<package>
	<name>reflex_gripper_msgs</name>
	<version>1.0.0</version>
	<description>Messages used for data passage in the Reflex system </description>
	<maintainer email="grebeg@rpi.edu">Gregory Grebe</maintainer>
	<license>TODO</license>
	<url type="repository">http://github.com/rpiRobotics/reflex-gripper-ros-pkg</url>

	<build_depend>message_generation</build_depend>
	<run_depend>message_runtime</run_depend>
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>std_srvs</build_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>std_srvs</run_depend>
</package>