<?xml version="1.0"?>
<package>
  <name>reflex_gripper_rr_bridge</name>
  <version>0.0.0</version>
  <description>The reflex_gripper_rr_bridge package</description>

  <maintainer email="gsgrebe@gmail.com">Greg Grebe</maintainer>
  <license>TODO</license>
  <url type="repository">http://github.com/rpiRobotics/reflex-gripper-ros-pkg</url>
  <author email="gsgrebe@gmail.com">Greg Grebe</author>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>RobotRaconteur</build_depend>
  <build_depend>reflex_gripper</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>RobotRaconteur</run_depend>
  <run_depend>reflex_gripper</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


</package>
